--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "topthink/framework": "5.1.*"
+        "topthink/framework": "5.1.*",
+        "topthink/think-captcha": "^2.0",
+        "phpmailer/phpmailer": "^6.0",
+        "swiftmailer/swiftmailer": "^6.0"
     },
     "autoload": {
         "psr-4": {
